k8s/01-namespace-e-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desafio2
