k8s/03-apps-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: desafio3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: auth-service
          image: 596081564794.dkr.ecr.us-east-1.amazonaws.com/togglemaster-auth-service:acb528a033cde5edb7dd5861286f41de7796e5dd
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: desafio3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8001
  selector:
    app: auth-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: desafio3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: flag-service
          image: 596081564794.dkr.ecr.us-east-1.amazonaws.com/togglemaster-flag-service:acb528a033cde5edb7dd5861286f41de7796e5dd
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m

---
apiVersion: v1
kind: Service
metadata:
  name: flag-service-svc
  namespace: desafio3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8002
  selector:
    app: flag-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: desafio3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: targeting-service
          image: 596081564794.dkr.ecr.us-east-1.amazonaws.com/togglemaster-targeting-service:f29671d1de9f414fb9ed6e99e8db9f43723f14bd
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m

---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service-svc
  namespace: desafio3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8003
  selector:
    app: targeting-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: desafio3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      serviceAccountName: default
      nodeSelector:
        kubernetes.io/os: linux

      containers:
        - name: evaluation-service
          image: 596081564794.dkr.ecr.us-east-1.amazonaws.com/togglemaster-evaluation-service:acb528a033cde5edb7dd5861286f41de7796e5dd
          ports:
            - containerPort: 8004

          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m

---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service-svc
  namespace: desafio3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8004
  selector:
    app: evaluation-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: desafio3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      serviceAccountName: default
      nodeSelector:
        kubernetes.io/os: linux

      containers:
        - name: analytics-service
          image: 596081564794.dkr.ecr.us-east-1.amazonaws.com/togglemaster-analytics-service:acb528a033cde5edb7dd5861286f41de7796e5dd
          ports:
            - containerPort: 8005

          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 300m

---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-svc
  namespace: desafio3
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8005
  selector:
    app: analytics-service
