k8s/03-ingress-e-hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toggle-master-ingress
  namespace: desafio2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    service.beta.kubernetes.io/aws-load-balancer-type: "clb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-svc
                port:
                  number: 8080
          - path: /flags(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-service-svc
                port:
                  number: 8080
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service-svc
                port:
                  number: 8080
          - path: /evaluation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service-svc
                port:
                  number: 8080
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service-svc
                port:
                  number: 8080
